-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 10
-
Component/s: hotspot
-
b04
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8298694 | openjdk8u372 | Jonathan Dowland | P4 | Resolved | Fixed | b01 |
| JDK-8359546 | shenandoah8u372 | Jonathan Dowland | P4 | Resolved | Fixed | b01 |
This is a bad pointer comparison in os_linux.cpp
2156 p = OSContainer::cpu_cpuset_memory_nodes();
2157 if (p < 0)
Also some if statement were missing bracket, a lot of extra scopes and complexity in the scoping.
2156 p = OSContainer::cpu_cpuset_memory_nodes();
2157 if (p < 0)
Also some if statement were missing bracket, a lot of extra scopes and complexity in the scoping.
- backported by
-
JDK-8298694 Bad pointer comparison and small cleanup in os_linux.cpp
-
- Resolved
-
-
JDK-8359546 Bad pointer comparison and small cleanup in os_linux.cpp
-
- Resolved
-