8197408: Bad pointer comparison and small cleanup in os_linux.cpp

Reviewed-by: sgehwolf
Backport-of: 5287d9a366791793b644d765ece783496b011119